# Medical-Contour-Annotation-Tool-

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEX_FINAL_REPORT.md  CODEX_FIRST_REAL_EVIDENCE_READINESS_REPORT.md  CODEX_IMPLEMENTATION_REPORT.md  CODEX_INFORMATION_REQUEST_REPORT.md  CODEX_LOCAL_MODEL_DEPLOYMENT_REPORT.md  CODEX_MODEL_SETUP_REPORT.md  CODEX_REAL_EVIDENCE_REPORT.md  Dockerfile  ENVIRONMENT.md  INSTALL.md  LICENSE  Makefile  README.md  build.xml  environment.yml  pyproject.toml  requirements.txt
agent/: __init__.py  router.py  routing_rules.yaml  workflow.py
app/: __init__.py
baseline_protocols/: 3d_slicer_task_sheet.md  README.md  baseline_results_template.csv  itk_snap_task_sheet.md  native_backend_task_sheet.md  qupath_task_sheet.md
benchmarks/: README.md  __init__.py  datasets.py  metrics.py  report.py  run_benchmark.py
configs/: README.md  andy_real_run_answers.template.yaml  datasets.example.yaml  datasets.local.template.yaml  experiment_registry.local.template.yaml  model_registry.example.yaml  model_setup_sources.yaml  models.example.yaml  models.local.template.yaml
contour_io/: __init__.py  exporters.py  importers.py
docs/: assumptions_until_andy_answers.md  availability_statement.md  baselines.md  bioinformatics_completion_checklist.md  datasets.md  dicom_rtstruct_limitations.md  export_formats.md  final_project_assumptions.md  first_real_evidence_checklist.md  implementation_dependency_map.md  memory_schema.md  missing_information_audit.md  model_backends.md  model_setup_and_public_data.md  next_implementation_plan.md  provenance.md  (+9 more)
(+134 files in other folders)
